# moodle-scrape

./: Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  scrape.py
